2007-12-05  Werner Koch  <wk@g10code.com>

	* pubkey.c (sample_private_key_1_1,sample_private_key_1_2): New.
	(get_keys_sample): Add arg SECRET_VARIANT.
	(check_run): Check all variants.  Also check gcry_pk_testkey.
	(check_keys_crypt): Add DECRYPT_FAIL_CODE.
	(check_keys): Ditto.

2007-11-30  Werner Koch  <wk@g10code.com>

	* benchmark.c (main): Add optione --verbose and reworked the
	option parsing.
	(random_bench): Dump random stats.

2007-10-31  Werner Koch  <wk@g10code.com>

	* benchmark.c (start_timer, stop_timer, elapsed_time) [W32]: Fixed.

2007-06-20  Werner Koch  <wk@g10code.com>

	* benchmark.c (rsa_bench): New.
	(main): New command "rsa".

2007-05-03  Werner Koch  <wk@g10code.com>

	* Makefile.am (EXTRA_DIST): Do not build pkbench.c

2007-05-02  David Shaw  <dshaw@jabberwocky.com>

	* basic.c (check_ciphers): Add Camellia.

2007-04-30  David Shaw  <dshaw@jabberwocky.com>

	* basic.c (check_ciphers): #if out ciphers we don't have.  Add
	test for GCRY_CIPHER_RFC2268_40.

2007-04-30  Werner Koch  <wk@g10code.com>

	* version.c: New.
	* Makefile.am (TESTS): Add version.

2007-04-30  Marcus Brinkmann  <marcus@g10code.de>

	* benchmark.c (ecc_bench): Release KEY_SPEC.

2007-04-28  Marcus Brinkmann  <marcus@g10code.de>

	* ac-data.c (check_run): Don't give redundant GCRY_AC_FLAG_DEALLOC
	in addition to GCRY_AC_FLAG_COPY.  Don't release LABEL1 or MPI0,
	as those are donated to libgcrypt, but do release MPI0 and MPI2.

2007-04-12  Marcus Brinkmann  <marcus@g10code.de>

	* ac-schemes.c (scheme_spec): Revert last change.
	
	* ac-schemes.c (scheme_spec): Remove const qualifier from member M.
	(es_check): Remove const qualifier from C and M2.

2007-03-28  Werner Koch  <wk@g10code.com>

	* pkbench.c (generate_key): Support named curves.

	* benchmark.c (dsa_bench): New args ITERATIONS and PRINT_HEADER.
	(main): Call dsa and ecc benchs.
	(show_sexp): New.

	* Makefile.am (TESTS): Move pkbench to EXTRA_PROGRAMS.

2007-03-22  Werner Koch  <wk@g10code.com>
