@@ -1,3 +1,8 @@
+2008-03-12  Werner Koch  <wk@g10code.com>
+
+	* benchmark.c (rsa_bench): Add arg NO_BLINDING.
+	(main): Add option --no-blinding.
+
 2007-12-05  Werner Koch  <wk@g10code.com>
 
 	* pubkey.c (sample_private_key_1_1,sample_private_key_1_2): New.
